# jscontact

./: .typos.toml  Cargo.toml  README.md  build.rs
.github/workflows/: tests.yml  typos.yml
src/: card.rs  lib.rs  main.rs  resource.rs
tests/: get_figures.py  jscontact.rs  test_from_rfc.rs  test_imported.rs  test_localizations.rs  test_resource.rs  test_to_rfc.rs  tests.rs
tests/imported/: README.md
tests/imported/jscontact-tests/: addresses_components.json  addresses_defaultseparator_rfc6868.json  addresses_localizations.json  anniversaries.json  calendars.json  created.json  cryptoKeys.json  cryptoKeys_datauri.json  directories.json  emails.json  extra_bad.json  extra_nested_bad.json  extra_patched_bad.json  keywords.json  kind_group.json  language.json  links.json  localizations_overwrite.json  localizations_patch.json  media.json  (+35 more)
tests/localizations/: test_localizations.json  test_localizations_addresses.json  test_localizations_addresses_path_object_1.json  test_localizations_addresses_path_object_2.json  test_localizations_addresses_path_object_3.json  test_localizations_addresses_path_object_4.json  test_localizations_calendars.json  test_localizations_calendars_path_object_1.json  test_localizations_calendars_path_object_2.json  test_localizations_directory.json  test_localizations_directory_path_object_1.json  test_localizations_directory_path_object_2.json  test_localizations_full_replacement_hashtable.json  test_localizations_keywords.json  test_localizations_links.json  test_localizations_links_path_object_1.json  test_localizations_links_path_object_2.json  test_localizations_media.json  test_localizations_media_path_object_1.json  test_localizations_media_path_object_2.json  test_localizations_name.json  test_localizations_name_components.json  test_localizations_name_components_2.json  test_localizations_name_components_path_object_1.json  test_localizations_name_path.json  test_localizations_nicknames.json  test_localizations_nicknames_path_object_1.json  test_localizations_nicknames_path_object_2.json  test_localizations_notes.json  test_localizations_notes_path_object_1.json  test_localizations_notes_path_object_2.json  test_localizations_personal_info.json  test_localizations_personal_info_path_object_1.json  test_localizations_personal_info_path_object_2.json  test_localizations_personal_info_path_object_3.json  test_localizations_scheduling_addresses.json  test_localizations_scheduling_addresses_path_object_1.json  test_localizations_scheduling_addresses_path_object_2.json  test_localizations_titles.json  test_localizations_titles_components.json  (+2 more)
tests/rfc9553/: figure_01.json  figure_03.txt  figure_04.txt  figure_07.json  figure_07.txt  figure_08.json  figure_09.json  figure_10.json  figure_11.json  figure_11.txt  figure_12.json  figure_13.json  figure_13.txt  figure_14.json  figure_14.txt  figure_15.json  figure_16.json  figure_17.json  figure_18.json  figure_19.json  figure_20.json  figure_21.json  figure_22.json  figure_23.json  figure_24.json  figure_25.json  figure_26.json  figure_27.json  figure_28.json  figure_29.json  figure_30.json  figure_31.json  figure_32.json  figure_33.json  figure_34.json  figure_35.json  figure_36.json  figure_37.json  figure_38.json  figure_39.json  (+5 more)
(+47 files in other folders)
