[package]
name = "jscontact"
version = "0.1.3"
edition = "2021"
description = "RFC 9553"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Its-Just-Nans/jscontact"
issues = "https://github.com/Its-Just-Nans/jscontact/issues"
keywords = ["jscontact", "vcard", "card", "rfc9553"]
categories = ["encoding", "data-structures", "internationalization", "parsing"]
documentation = "https://docs.rs/jscontact"

[features]
default = ["typed"]
typed = []


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.89"
