[package]
name = "jscontact"
version = "0.1.4"
edition = "2021"
description = "RFC 9553"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Its-Just-Nans/jscontact"
issues = "https://github.com/Its-Just-Nans/jscontact/issues"
keywords = ["jscontact", "vcard", "card", "rfc9553"]
categories = ["encoding", "data-structures", "internationalization", "parsing"]
documentation = "https://docs.rs/jscontact"
exclude = [
    "tests/imported",         # imported tests with different license
    "tests/rfc9553/raws",     # raws figures from RFC 9553
    "tests/test_imported.rs", # test file for imported tests
    "tests/get_figures.py",   # python script to get figures from RFC 9553
]

[features]
default = ["typed"]
typed = []


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.89"
