[package]
name = "jscontact"
version = "0.2.0"
edition = "2021"
description = "RFC 9553"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Its-Just-Nans/jscontact"
keywords = ["jscontact", "vcard", "card", "rfc9553"]
categories = ["encoding", "data-structures", "internationalization", "parsing"]
documentation = "https://docs.rs/jscontact"
exclude = [
    "build.rs",               # build script to get figures from RFC 9553
    "tests/imported/",        # imported tests with different license
    "tests/rfc9553/raws/",    # raws figures from RFC 9553
    "tests/test_imported.rs", # test file for imported tests
    "tests/get_figures.py",   # python script to get figures from RFC 9553
]

[features]
# The "typed" feature is enabled by default
default = ["typed", "jsonptr"]

# The typed feature enables the usage of the @type attributes in jscontact structs
# This can be disabled with { default-features = false } in your Cargo.toml
# Disabling this feature reduce the size of the library and the size of the serialized data
# Note that disabling this feature can break serialization/deserialization of jscontact structs
# because the @type attributes are used to determine the type of the jscontact struct
# If the @type attributes are not present, the deserialization can fail for similars jscontact structs
# see tests/test_localizations.rs for an example
typed = []

jsonptr = ["dep:jsonptr"]


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonptr = { version = "0.6.3", optional = true }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }

[package.metadata.docs.rs]
all-features = true
